--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 :root {
   color-scheme: dark;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  
+}
+
+body {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 /* general */
@@ -12,7 +19,6 @@ main {
 
 /* container */
 .container {
-  min-width: 276px;
   position: relative;
   border: 2px solid white;
   padding: 10px 20px;
@@ -26,36 +32,45 @@ h1 {
 }
 
 /* input & button */
-.input-container {
+
+.block > div {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  padding: 6px;
 }
 
-label {
-  color: antiquewhite;
+.input-container {
+  flex-direction: column;
 }
 
 .input-container > div {
   display: flex;
-  padding: 6px;
+  gap: 10px;
+  margin: 8px 0;
+}
+
+label {
+  width: 70px;
+  color: antiquewhite;
+}
+
+input {
+  width: 100%;
 }
 
 input, button {
   color: black;
   background-color: antiquewhite;
-  font-weight: 700;
   border-color: antiquewhite;
-  padding: 10px;
+  padding: 8px 12px;
+  border-radius: 2vmax;
 }
 
-input {
-  border-radius: 1vmax 0 0 1vmax;
+.range {
+  padding: 0;
 }
 
-button {
-  border-right: none;
-  border-radius: 0 1vmax 1vmax 0;
+.btn-section {
+  justify-content: space-around;
 }
 
 button:hover {
